--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,36 @@ dependencies:
       sdk: flutter
 
    cupertino_icons: ^1.0.6
+   freezed_annotation: ^2.4.4
+   json_annotation: ^4.9.0
    http: ^1.2.2
+   intl: ^0.19.0
    url_launcher: ^6.3.0
+   fl_chart: ^0.68.0
+   material_design_icons_flutter: ^7.0.7296
+   image_picker: ^1.1.2
+   file_picker: ^8.0.0+1
+   uuid: ^4.4.2
+   cached_network_image: ^3.4.0
+   permission_handler: ^11.3.1
+   google_fonts: ^6.2.1
+   flutter_animate: ^4.5.0
+   shared_preferences: ^2.3.1
 
 dev_dependencies:
    flutter_test:
       sdk: flutter
 
    flutter_lints: ^3.0.0
+   build_runner: ^2.4.11
+   freezed: ^2.5.2
+   json_serializable: ^6.8.0
+   flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+   android: 'launcher_icon'
+   ios: true
+   image_path: 'assets/icon/icon.png'
 
 flutter:
    uses-material-design: true
